Closed Bug 38610 Opened 26 years ago Closed 26 years ago

unexpected js component interface error

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sean, Assigned: jst)

Details

(Keywords: testcase, Whiteboard: [nsbeta2+][ETA 7/11])

Attachments

(1 file)

Loading the attached html file generates a js error: Exception... "Component does not have requested interface" code: "-2147467262" nsresult: "0x80004002 (NS_NOINTERFACE)" It appears that mozilla considers 'complete' an interface of an image object?
Keywords: 4xp, testcase
d'oh - actual js code: <script LANGUAGE=JavaScript> diceFrame = new Array (); totalFrames = 6; allMediaLoaded = true; for (var frameNo = 1; frameNo <= totalFrames; frameNo++) { diceFrame [frameNo] = new Image (90,90); diceFrame [frameNo].src = 'frame' + frameNo + '.gif'; } for (var frameNo = 1; frameNo <= totalFrames && allMediaLoaded; frameNo++) allMediaLoaded = allMediaLoaded && diceFrame [frameNo].complete; // problem alert(diceFrame [frameNo].complete); </script>
Actually, it's saying that the interface doesn't have this property. I assume it needs to be implemented. --> Dom Level 0 jst/desale <script LANGUAGE=JavaScript> var foo = new Image (90,90); foo.src = 'whatever.gif'; var bar = foo.complete; // problem alert(bar); </script>
Assignee: rogerl → jst
Component: Javascript Engine → DOM Level 0
QA Contact: pschwartau → desale
This should IMO be fixed for beta2, adding keyword.
Keywords: nsbeta2
This is needed for beta2; giving PDT approval.
Whiteboard: [nsbeta2+]
Status: NEW → ASSIGNED
Almost works in my tree, still needs some work but it's getting close.
OS: Windows 2000 → All
Hardware: PC → All
Whiteboard: [nsbeta2+] → [nsbeta2+][jst]
Target Milestone: --- → M16
*** Bug 28277 has been marked as a duplicate of this bug. ***
M16 has been out for a while now, these bugs target milestones need to be updated.
While I do have an almost functioning fix for the img.complete on images created in JS problems I don't feel comfortable with checking that in at this point, in stead I'll fix the incorrect exception now and leave the img.complete problem to bug 28277...
Whiteboard: [nsbeta2+][jst] → [nsbeta2+][ETA 7/11]
The fix for the exception is checked in, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Verified with 2000-07-12-15 on Win-95.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: