Fixing nsbeta2+ bug 38610, don't throw a JS exception when .complete is accessed on an Image created in JS. r=pollman@netscape.com